--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#F7F7F7"
@@ -8,58 +9,61 @@
 
     <RelativeLayout
             android:id="@+id/header"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="100dp"
-            android:background="@color/blue">
+            android:background="@color/blue"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
-        <RelativeLayout
-                android:id="@+id/header_content"
+        <TextView
+                android:id="@+id/header_text"
                 android:layout_width="wrap_content"
-                android:layout_height="54dp"
-                android:layout_marginStart="30dp"
-                android:layout_centerInParent="true">
-
-            <ImageView
-                    android:id="@+id/logo"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/logo"
-                    android:contentDescription="@string/yuta_logo" />
-
-            <TextView
-                    android:id="@+id/header_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="72dp"
-                    android:text="@string/header_text"
-                    android:textAppearance="@style/header_text" />
-        </RelativeLayout>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_centerInParent="true"
+                android:drawablePadding="25dp"
+                android:gravity="center"
+                android:text="@string/header_text"
+                android:textAppearance="@style/header_text"
+                app:drawableStartCompat="@drawable/logo" />
     </RelativeLayout>
 
     <ImageView
             android:id="@+id/login_background"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="99dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/header"
+            app:layout_constraintBottom_toTopOf="@+id/footer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:src="@drawable/login_background"
-            android:contentDescription="@string/ystu_photo" />
+            android:contentDescription="@string/ystu_photo"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
+            android:cropToPadding="true"
+            android:scaleType="centerCrop" />
 
     <RelativeLayout
             android:id="@+id/auth_form"
             android:layout_width="wrap_content"
             android:layout_height="277dp"
-            android:layout_centerVertical="true">
+            android:layout_centerInParent="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
                 android:id="@+id/auth_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:text="@string/auth_text"
                 android:layout_marginTop="10dp"
                 android:textAppearance="@style/auth_text"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:fontFamily="@font/montserrat_bold"
+                android:autoSizeTextType="uniform" />
 
         <ImageView
                 android:id="@+id/separator"
@@ -163,15 +167,19 @@
             android:textAlignment="center"
             android:text="@string/error_message"
             android:layout_marginTop="15dp"
-            android:layout_below="@+id/auth_form"
+            app:layout_constraintTop_toBottomOf="@+id/auth_form"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:visibility="invisible" />
 
     <RelativeLayout
             android:id="@+id/footer"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:background="#16389D"
-            android:layout_alignParentBottom="true">
+            android:background="@color/blue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
                 android:id="@+id/footer_text"
@@ -194,4 +202,4 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="40dp" />
     </RelativeLayout>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
