--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,4 +47,10 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">#FF0000</item>
     </style>
+
+    <style name="loading">
+        <item name="android:fontFamily">@font/montserrat_regular</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
