--- a/app/src/main/res/drawable/login_button.xml
+++ b/app/src/main/res/drawable/login_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="#208B9F">
+        android:color="#EC7D24">
     <item>
         <shape
                 android:shape="rectangle"
