--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -170,7 +170,7 @@
             app:layout_constraintTop_toBottomOf="@+id/auth_form"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="invisible" />
+            android:visibility="gone" />
 
     <RelativeLayout
             android:id="@+id/footer"
