--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -358,6 +358,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <com.google.android.material.imageview.ShapeableImageView
+                    android:background="@drawable/photo_filler"
                     android:layout_width="125dp"
                     android:layout_height="125dp"
                     android:id="@+id/photo"
