--- a/app/src/main/res/drawable/exit_icon.xml
+++ b/app/src/main/res/drawable/exit_icon.xml
@@ -8,6 +8,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2.5"
       android:fillColor="#00000000"
-      android:strokeColor="#16389D"
+      android:strokeColor="@color/white"
       android:strokeLineCap="round"/>
 </vector>
