--- a/app/src/main/res/drawable/fragment_background.xml
+++ b/app/src/main/res/drawable/fragment_background.xml
@@ -1,15 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?><!--<selector xmlns:android="http://schemas.android.com/apk/res/android">-->
-<!--    <item>-->
-<!--        <shape>-->
-<!--            <gradient android:type="linear" android:startColor="#0D2468" android:centerColor="#E673473C" android:endColor="#F2D96A10" />-->
-<!--        </shape>-->
-<!--    </item>-->
-<!--</selector>-->
-
+<?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
+            <solid android:color="@color/white" />
         </shape>
     </item>
     <item android:bottom="100dp">
