--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
     <style name="header_text">
         <item name="android:fontFamily">@font/montserrat_bold</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="auth_text">
@@ -38,7 +38,7 @@
         <item name="android:fontFamily">@font/montserrat_bold</item>
         <item name="android:textSize">16sp</item>
         <item name="android:letterSpacing">0.1</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="error_message">
@@ -56,7 +56,7 @@
     <style name="nav_item">
         <item name="android:textSize">11sp</item>
         <item name="android:letterSpacing">0.12</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
