--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,22 +7,22 @@
 
     <fragment
             android:id="@+id/profileFragment"
-            android:name="com.ilyap.yuta.ui.ProfileFragment"
+            android:name="com.ilyap.yuta.ui.fragments.ProfileFragment"
             android:label="fragment_profile"
             tools:layout="@layout/fragment_profile" />
     <fragment
             android:id="@+id/projectsFragment"
-            android:name="com.ilyap.yuta.ui.ProjectsFragment"
+            android:name="com.ilyap.yuta.ui.fragments.ProjectsFragment"
             android:label="fragment_projects"
             tools:layout="@layout/fragment_projects" />
     <fragment
             android:id="@+id/tasksFragment"
-            android:name="com.ilyap.yuta.ui.TasksFragment"
+            android:name="com.ilyap.yuta.ui.fragments.TasksFragment"
             android:label="fragment_tasks"
             tools:layout="@layout/fragment_tasks" />
     <fragment
             android:id="@+id/teamsFragment"
-            android:name="com.ilyap.yuta.ui.TeamsFragment"
+            android:name="com.ilyap.yuta.ui.fragments.TeamsFragment"
             android:label="fragment_teams"
             tools:layout="@layout/fragment_teams" />
 </navigation>
