--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -135,9 +135,8 @@
                                 android:autoSizeTextType="uniform"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:padding="4sp"
+                                android:padding="4dp"
                                 android:id="@+id/projects_count" />
-
                     </LinearLayout>
 
                     <LinearLayout
@@ -164,7 +163,7 @@
                                 android:autoSizeTextType="uniform"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:padding="4sp"
+                                android:padding="4dp"
                                 android:id="@+id/tasks_count" />
                     </LinearLayout>
 
@@ -192,7 +191,7 @@
                                 android:autoSizeTextType="uniform"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:padding="4sp"
+                                android:padding="4dp"
                                 android:id="@+id/teams_count" />
                     </LinearLayout>
                 </LinearLayout>
