--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="orange">#D96A10</color>
     <color name="blue">#16389D</color>
     <color name="dark_gray">#1C1C1C</color>
+    <color name="light_gray">#4A4A4A</color>
 
     <color name="start_gradient">#0C2367</color>
     <color name="center_gradient">#6C4F53</color>
