--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="footer_text">
         <item name="android:fontFamily">@font/montserrat_semibold</item>
@@ -142,5 +142,12 @@
         <item name="android:textSize">15sp</item>
         <item name="android:letterSpacing">0.1</item>
         <item name="android:textColor">@color/dark_gray</item>
+    </style>
+
+    <style name="photo_dialog_item">
+        <item name="android:fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:letterSpacing">0.12</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
