--- a/app/src/main/res/layout/delete_photo_dialog.xml
+++ b/app/src/main/res/layout/delete_photo_dialog.xml
@@ -46,7 +46,7 @@
             android:autoSizeTextType="uniform"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/separator"
+            app:layout_constraintTop_toBottomOf="@id/separator"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp" />
@@ -58,7 +58,7 @@
             android:src="@drawable/separator"
             android:contentDescription="@string/separator"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/delete_text"
+            app:layout_constraintTop_toBottomOf="@id/delete_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -82,7 +82,7 @@
             android:paddingHorizontal="30dp"
             android:paddingVertical="5dp"
             tools:ignore="TouchTargetSizeCheck"
-            app:layout_constraintTop_toBottomOf="@+id/delete_desc"
+            app:layout_constraintTop_toBottomOf="@id/delete_desc"
             android:layout_marginTop="40dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
