--- a/app/src/main/res/layout/delete_photo_dialog.xml
+++ b/app/src/main/res/layout/delete_photo_dialog.xml
@@ -72,7 +72,7 @@
             android:text="@string/delete_button"
             android:textAlignment="textStart"
             android:fontFamily="@font/montserrat_bold"
-            android:autoSizeTextType="none"
+            android:autoSizeTextType="uniform"
             android:drawablePadding="10dp"
             app:drawableLeftCompat="@drawable/delete_photo_icon"
             app:layout_constraintEnd_toEndOf="parent"
