--- a/app/src/main/res/layout/reload_dialog.xml
+++ b/app/src/main/res/layout/reload_dialog.xml
@@ -112,7 +112,7 @@
             android:text="@string/reload_button"
             android:textAlignment="textStart"
             android:fontFamily="@font/montserrat_bold"
-            android:autoSizeTextType="none"
+            android:autoSizeTextType="uniform"
             android:drawablePadding="10dp"
             app:drawableLeftCompat="@drawable/reload_button_icon"
             app:layout_constraintEnd_toEndOf="parent"
