--- a/app/src/main/res/layout/upload_photo_dialog.xml
+++ b/app/src/main/res/layout/upload_photo_dialog.xml
@@ -90,7 +90,7 @@
             android:text="@string/miniature_button"
             android:textAlignment="textStart"
             android:fontFamily="@font/montserrat_bold"
-            android:autoSizeTextType="none"
+            android:autoSizeTextType="uniform"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -146,7 +146,7 @@
                 android:textAlignment="center"
                 android:textAppearance="@style/pick_button"
                 android:fontFamily="@font/montserrat_bold"
-                android:autoSizeTextType="none"
+                android:autoSizeTextType="uniform"
                 android:src="@drawable/delete_photo_icon"
                 app:layout_constraintStart_toStartOf="parent"
                 android:paddingHorizontal="35dp"
