--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,9 +12,9 @@
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:background="@color/blue"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
         <TextView
                 android:layout_width="wrap_content"
@@ -26,42 +26,42 @@
                 android:text="@string/header_text"
                 android:textAppearance="@style/header_text"
                 app:drawableStartCompat="@drawable/logo" />
+
     </RelativeLayout>
 
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/header"
-            app:layout_constraintBottom_toTopOf="@+id/footer"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:src="@drawable/login_background"
             android:contentDescription="@string/ystu_photo"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="0dp"
             android:cropToPadding="true"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toTopOf="@+id/footer"
+            app:layout_constraintTop_toBottomOf="@+id/header"
+            android:id="@+id/imageView" />
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/auth_form"
             android:layout_width="wrap_content"
-            android:layout_height="277dp"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/footer"
+            app:layout_constraintTop_toBottomOf="@+id/header">
 
         <TextView
                 android:id="@+id/auth_text"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:text="@string/auth_text"
-                android:layout_marginTop="10dp"
                 android:textAppearance="@style/auth_text"
                 android:textAlignment="center"
                 android:fontFamily="@font/montserrat_bold"
-                android:autoSizeTextType="uniform" />
+                android:autoSizeTextType="uniform"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
                 android:id="@+id/separator"
@@ -70,8 +70,11 @@
                 android:src="@drawable/separator"
                 android:contentDescription="@string/separator"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="15dp"
-                android:layout_below="@+id/auth_text" />
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/auth_text"
+                app:layout_constraintTop_toBottomOf="@id/auth_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
         <RelativeLayout
                 android:id="@+id/login_field"
@@ -79,9 +82,14 @@
                 android:layout_width="358dp"
                 android:layout_height="50dp"
                 android:background="@drawable/field_background"
-                android:layout_marginTop="17dp"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@+id/separator">
+                android:layout_below="@+id/separator"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/separator"
+                android:layout_marginTop="28dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginStart="32dp">
 
             <EditText
                     android:id="@+id/login"
@@ -116,7 +124,12 @@
                 android:background="@drawable/field_background"
                 android:layout_marginTop="20dp"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@+id/login_field">
+                android:layout_below="@+id/login_field"
+                app:layout_constraintTop_toBottomOf="@id/login_field"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp">
 
             <EditText
                     android:id="@+id/password"
@@ -141,34 +154,39 @@
                     android:contentDescription="@string/password_icon"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="17dp" />
+
         </RelativeLayout>
 
         <Button
                 android:id="@+id/login_button"
                 android:layout_width="200dp"
                 android:layout_height="48dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="30dp"
                 android:text="@string/login_button"
                 android:textAppearance="@style/login_button"
                 android:background="@drawable/login_button"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:elevation="5dp"
                 android:layout_below="@+id/password_field"
-                android:layout_centerHorizontal="true" />
-    </RelativeLayout>
+                android:layout_centerHorizontal="true"
+                app:layout_constraintTop_toBottomOf="@id/password_field"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
             android:id="@+id/error_text"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/error_message"
-            android:textAlignment="center"
             android:text="@string/error_message"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/auth_form"
+            android:visibility="gone"
+            android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="gone" />
+            app:layout_constraintTop_toBottomOf="@+id/auth_form"
+            android:layout_marginTop="28dp" />
 
     <RelativeLayout
             android:id="@+id/footer"
