--- a/app/src/main/res/drawable/photo_dialog_item.xml
+++ b/app/src/main/res/drawable/photo_dialog_item.xml
@@ -2,14 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/light_gray" />
-            <corners android:radius="10dp" />
-        </shape>
-    </item>
-    <item android:state_pressed="false">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/dark_gray" />
-            <corners android:radius="10dp" />
+            <solid android:color="#F2E2E2E2" />
+            <corners android:radius="30dp" />
         </shape>
     </item>
 </selector>
