--- a/app/src/main/res/layout/loading_dialog.xml
+++ b/app/src/main/res/layout/loading_dialog.xml
@@ -4,7 +4,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="50dp"
-        android:background="@drawable/dark_dialog_background">
+        android:background="@drawable/dialog_background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
@@ -35,7 +35,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:indeterminate="true"
                 android:indeterminateTintMode="src_atop"
-                android:indeterminateTint="@color/white"
+                android:indeterminateTint="@color/light_gray"
                 android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toTopOf="@+id/textView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
