--- a/app/src/main/res/layout/photo_dialog.xml
+++ b/app/src/main/res/layout/photo_dialog.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:background="@drawable/dark_dialog_background">
+        android:background="@drawable/dialog_background">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -33,8 +33,7 @@
                 android:drawablePadding="15dp"
                 app:drawableLeftCompat="@drawable/update_photo_icon"
                 android:layout_weight="1"
-                tools:ignore="TouchTargetSizeCheck"
-                android:textColor="@color/white" />
+                tools:ignore="TouchTargetSizeCheck" />
 
         <TextView
                 android:id="@+id/edit_miniature"
@@ -51,8 +50,7 @@
                 android:drawablePadding="15dp"
                 app:drawableLeftCompat="@drawable/edit_miniature_icon"
                 android:layout_weight="1"
-                tools:ignore="TouchTargetSizeCheck"
-                android:textColor="@color/white" />
+                tools:ignore="TouchTargetSizeCheck" />
 
         <TextView
                 android:id="@+id/delete_photo"
@@ -69,8 +67,7 @@
                 android:drawablePadding="17dp"
                 app:drawableLeftCompat="@drawable/delete_photo_icon"
                 android:layout_weight="1"
-                tools:ignore="TouchTargetSizeCheck"
-                android:textColor="@color/white" />
+                tools:ignore="TouchTargetSizeCheck" />
 
 
     </LinearLayout>
