Added teams switch and json teams array parse

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,12 +20,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_centerInParent="true"
                 android:drawablePadding="25dp"
                 android:gravity="center"
                 android:text="@string/header_text"
                 android:textAppearance="@style/header_text"
-                app:drawableStartCompat="@drawable/logo" />
+                app:drawableStartCompat="@drawable/fragment_logo"
+                android:layout_centerInParent="true" />
 
     </RelativeLayout>
 
