--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -158,4 +158,15 @@
     <style name="crop_button" parent="reload_button">
         <item name="android:textSize">15sp</item>
     </style>
+
+    <style name="active_teams" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:fontFamily">@font/montserrat_semibold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="default_teams" parent="active_teams">
+        <item name="android:textColor">@color/blue</item>
+    </style>
 </resources>
