--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -166,6 +166,19 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="card_name" >
+        <item name="android:fontFamily">@font/montserrat_bold</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/dark_gray</item>
+    </style>
+
+    <style name="team_name">
+        <item name="android:fontFamily">@font/montserrat_bold</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:textColor">@color/dark_gray</item>
+        <item name="android:letterSpacing">0.05</item>
+    </style>
+
     <style name="default_teams" parent="active_teams">
         <item name="android:textColor">@color/blue</item>
     </style>
