--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -31,7 +31,7 @@
                     android:contentDescription="@string/yuta_logo" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/scrollview_background"
                     app:layout_constraintTop_toTopOf="parent"
@@ -59,7 +59,7 @@
                         android:layout_marginTop="25dp"
                         android:drawablePadding="10dp" />
 
-                <LinearLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/toggleGroup"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -70,8 +70,10 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/create_team"
                         android:layout_marginTop="25dp"
-                        android:layout_marginStart="23dp"
-                        android:layout_marginEnd="23dp">
+                        android:layout_marginStart="25dp"
+                        android:layout_marginEnd="25dp"
+                        android:maxWidth="350dp"
+                        android:minWidth="200dp">
 
                     <ToggleButton
                             android:id="@+id/manager_button"
@@ -82,9 +84,13 @@
                             android:textOn="@string/manager_button"
                             android:textOff="@string/manager_button"
                             android:background="@drawable/switch_button"
-                            android:paddingHorizontal="30dp"
                             android:stateListAnimator="@null"
-                            tools:ignore="TouchTargetSizeCheck" />
+                            tools:ignore="TouchTargetSizeCheck"
+                            android:paddingHorizontal="30dp"
+                            app:layout_constraintEnd_toStartOf="@+id/member_button"
+                            android:layout_marginEnd="-10dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent" />
 
                     <ToggleButton
                             android:id="@+id/member_button"
@@ -95,10 +101,14 @@
                             android:textOn="@string/member_button"
                             android:textOff="@string/member_button"
                             android:background="@drawable/switch_button"
-                            android:paddingHorizontal="30dp"
                             android:stateListAnimator="@null"
-                            tools:ignore="TouchTargetSizeCheck" />
-                </LinearLayout>
+                            tools:ignore="TouchTargetSizeCheck"
+                            android:paddingHorizontal="40dp"
+                            app:layout_constraintStart_toEndOf="@id/manager_button"
+                            android:layout_marginStart="-20dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -109,7 +119,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:nestedScrollingEnabled="false"
-                        android:paddingBottom="45dp"/>
+                        android:paddingBottom="30dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
