--- a/app/src/main/res/layout/item_carousel.xml
+++ b/app/src/main/res/layout/item_carousel.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp">
+        android:layout_marginTop="35dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/teamLayout"
@@ -20,10 +20,9 @@
                 android:textAppearance="@style/team_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:textAlignment="center" />
+                android:textAlignment="textStart" />
 
         <Button
                 android:layout_width="20dp"
@@ -36,7 +35,7 @@
                 tools:ignore="TouchTargetSizeCheck"
                 android:backgroundTint="@color/orange"
                 app:layout_constraintStart_toEndOf="@+id/teamName"
-                android:layout_marginStart="25dp"
+                android:layout_marginStart="16dp"
                 app:layout_constraintTop_toTopOf="@+id/teamName"
                 app:layout_constraintBottom_toBottomOf="@+id/teamName"
                 android:visibility="gone" />
@@ -61,53 +60,53 @@
             android:id="@+id/imagePager"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/btnPrev"
-            app:layout_constraintEnd_toStartOf="@+id/btnNext"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/teamLayout"
             android:layout_marginTop="20dp"
             android:overScrollMode="never"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp" />
 
     <LinearLayout
-            android:id="@+id/dotsLayout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal"
             android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/imagePager"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent">
 
-    <Button
-            android:id="@+id/btnPrev"
-            android:layout_width="16dp"
-            android:layout_height="36dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            style="@style/button_style"
-            android:background="@drawable/arrow"
-            app:layout_constraintBottom_toBottomOf="@+id/imagePager"
-            app:layout_constraintTop_toTopOf="@+id/imagePager"
-            app:layout_constraintStart_toStartOf="parent"
-            android:rotationY="180"
-            android:contentDescription="@string/previous_cards"
-            tools:ignore="TouchTargetSizeCheck"
-            android:layout_marginStart="5dp" />
+        <Button
+                android:id="@+id/btnPrev"
+                android:layout_width="11dp"
+                android:layout_height="31dp"
+                style="@style/button_style"
+                android:background="@drawable/arrow"
+                android:rotationY="180"
+                android:contentDescription="@string/previous_cards"
+                tools:ignore="RtlSymmetry,TouchTargetSizeCheck"
+                android:paddingEnd="12dp"
+                android:layout_marginEnd="12dp" />
 
-    <Button
-            android:id="@+id/btnNext"
-            android:layout_width="16dp"
-            android:layout_height="36dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            style="@style/button_style"
-            android:background="@drawable/arrow"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/imagePager"
-            app:layout_constraintTop_toTopOf="@+id/imagePager"
-            android:contentDescription="@string/next_cards"
-            tools:ignore="TouchTargetSizeCheck"
-            android:layout_marginEnd="5dp" />
+        <LinearLayout
+                android:id="@+id/dotsLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center" />
+
+        <Button
+                android:id="@+id/btnNext"
+                android:layout_width="11dp"
+                android:layout_height="31dp"
+                style="@style/button_style"
+                android:background="@drawable/arrow"
+                android:contentDescription="@string/next_cards"
+                tools:ignore="TouchTargetSizeCheck"
+                android:layout_marginStart="12dp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
