--- a/app/src/main/res/layout/item_carousel_card.xml
+++ b/app/src/main/res/layout/item_carousel_card.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/name"
             app:layout_constraintTop_toBottomOf="@id/avatar"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="10dp" />
 
