--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -4,7 +4,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragments.TeamsFragment">
+        tools:context=".ui.fragments.TeamsFragment"
+        android:id="@+id/teamsContainer">
 
     <ScrollView
             android:id="@+id/scrollView"
