--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,13 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape>
-            <gradient
-                    android:type="linear"
-                    android:angle="-45"
-                    android:startColor="@color/start_gradient"
-                    android:centerColor="@color/center_gradient"
-                    android:endColor="@color/end_gradient" />
-        </shape>
-    </item>
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="337"
+    android:viewportHeight="337">
+  <group android:scaleX="1.18"
+      android:scaleY="1.18"
+      android:translateX="-30.33"
+      android:translateY="-30.33">
+    <path
+        android:pathData="M60,0L277,0A60,60 0,0 1,337 60L337,277A60,60 0,0 1,277 337L60,337A60,60 0,0 1,0 277L0,60A60,60 0,0 1,60 0z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="26"
+            android:startY="19"
+            android:endX="320.5"
+            android:endY="321"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF16389D"/>
+          <item android:offset="1" android:color="#FFD96A10"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
+</vector>
