--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -19,104 +19,120 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/scrollview_background"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="115dp">
+                android:layout_height="wrap_content">
 
-            <Button
-                    android:id="@+id/create_team"
-                    android:background="@drawable/team_button"
-                    style="@style/button_style"
-                    android:textAppearance="@style/active_teams"
-                    android:text="@string/create_team"
-                    android:textAlignment="center"
-                    app:layout_constraintStart_toStartOf="@+id/toggleGroup"
-                    android:paddingHorizontal="21dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="RtlHardcoded,TouchTargetSizeCheck"
-                    android:autoSizeTextType="uniform"
-                    android:drawableLeft="@drawable/create_team_icon"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="25dp"
-                    android:drawablePadding="10dp" />
+            <ImageView
+                    android:contentDescription="@string/yuta_logo"
+                    android:layout_height="51dp"
+                    android:layout_width="135dp"
+                    android:src="@drawable/logo"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/toggleGroup"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/switch_background"
-                    android:orientation="horizontal"
-                    app:checkedButton="@id/manager_button"
+                    android:background="@drawable/scrollview_background"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/create_team"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginStart="25dp"
-                    android:layout_marginEnd="25dp"
-                    android:maxWidth="350dp"
-                    android:minWidth="200dp">
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:id="@+id/constraintLayout"
+                    android:layout_marginTop="115dp">
 
-                <ToggleButton
-                        android:id="@+id/manager_button"
+                <Button
+                        android:id="@+id/create_team"
+                        android:background="@drawable/team_button"
+                        style="@style/button_style"
                         android:textAppearance="@style/active_teams"
-                        android:hapticFeedbackEnabled="false"
+                        android:text="@string/create_team"
+                        android:textAlignment="center"
+                        app:layout_constraintStart_toStartOf="@+id/toggleGroup"
+                        android:paddingHorizontal="21dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textOn="@string/manager_button"
-                        android:textOff="@string/manager_button"
-                        android:background="@drawable/switch_button"
-                        android:stateListAnimator="@null"
-                        tools:ignore="TouchTargetSizeCheck"
-                        android:paddingHorizontal="30dp"
-                        app:layout_constraintEnd_toStartOf="@+id/member_button"
-                        android:layout_marginEnd="-10dp"
+                        tools:ignore="RtlHardcoded,TouchTargetSizeCheck"
+                        android:autoSizeTextType="uniform"
+                        android:drawableLeft="@drawable/create_team_icon"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent" />
+                        android:layout_marginTop="25dp"
+                        android:drawablePadding="10dp" />
 
-                <ToggleButton
-                        android:id="@+id/member_button"
-                        android:textAppearance="@style/default_teams"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/toggleGroup"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:hapticFeedbackEnabled="false"
-                        android:textOn="@string/member_button"
-                        android:textOff="@string/member_button"
-                        android:background="@drawable/switch_button"
-                        android:stateListAnimator="@null"
-                        tools:ignore="TouchTargetSizeCheck"
-                        android:paddingHorizontal="40dp"
-                        app:layout_constraintStart_toEndOf="@id/manager_button"
-                        android:layout_marginStart="-20dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent" />
+                        android:background="@drawable/switch_background"
+                        android:orientation="horizontal"
+                        app:checkedButton="@id/manager_button"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/create_team"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginEnd="25dp"
+                        android:maxWidth="350dp"
+                        android:minWidth="200dp">
+
+                    <ToggleButton
+                            android:id="@+id/manager_button"
+                            android:textAppearance="@style/active_teams"
+                            android:hapticFeedbackEnabled="false"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textOn="@string/manager_button"
+                            android:textOff="@string/manager_button"
+                            android:background="@drawable/switch_button"
+                            android:stateListAnimator="@null"
+                            tools:ignore="TouchTargetSizeCheck"
+                            android:paddingHorizontal="30dp"
+                            app:layout_constraintEnd_toStartOf="@+id/member_button"
+                            android:layout_marginEnd="-10dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent" />
+
+                    <ToggleButton
+                            android:id="@+id/member_button"
+                            android:textAppearance="@style/default_teams"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:hapticFeedbackEnabled="false"
+                            android:textOn="@string/member_button"
+                            android:textOff="@string/member_button"
+                            android:background="@drawable/switch_button"
+                            android:stateListAnimator="@null"
+                            tools:ignore="TouchTargetSizeCheck"
+                            android:paddingHorizontal="40dp"
+                            app:layout_constraintStart_toEndOf="@id/manager_button"
+                            android:layout_marginStart="-20dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <TextView
+                        android:id="@+id/empty_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/light_gray"
+                        android:textAppearance="@style/error_message"
+                        android:textAlignment="center"
+                        android:text="@string/empty_text"
+                        app:layout_constraintTop_toBottomOf="@+id/toggleGroup"
+                        android:layout_marginTop="40dp"
+                        android:visibility="gone" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@+id/toggleGroup"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:nestedScrollingEnabled="false"
+                        android:paddingBottom="30dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <TextView
-                    android:id="@+id/empty_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/light_gray"
-                    android:textAppearance="@style/error_message"
-                    android:textAlignment="center"
-                    android:text="@string/empty_text"
-                    app:layout_constraintTop_toBottomOf="@+id/toggleGroup"
-                    android:layout_marginTop="40dp"
-                    android:visibility="gone" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/toggleGroup"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:nestedScrollingEnabled="false"
-                    android:paddingBottom="30dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
@@ -148,5 +164,4 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
