--- a/app/src/main/res/drawable/login_button.xml
+++ b/app/src/main/res/drawable/login_button.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="#EC7D24">
-    <item>
-        <shape
-                android:shape="rectangle"
-                android:width="135dp"
-                android:height="35dp">
-            <solid android:color="@color/orange" />
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle" android:width="135dp" android:height="35dp">
+            <solid android:color="@color/dark_gray" />
             <corners android:radius="30dp" />
         </shape>
     </item>
-</ripple>
+
+    <item>
+        <ripple android:color="#EC7D24">
+            <item>
+                <shape android:shape="rectangle" android:width="135dp" android:height="35dp">
+                    <solid android:color="@color/orange" />
+                    <corners android:radius="30dp" />
+                </shape>
+            </item>
+        </ripple>
+    </item>
+</selector>
