--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -102,7 +102,7 @@
                     android:background="@null"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="10dp"
-                    android:inputType="text|textAutoComplete" />
+                    android:inputType="text|textNoSuggestions" />
 
             <ImageView
                     android:id="@+id/login_icon"
