--- a/app/src/main/res/layout/item_carousel.xml
+++ b/app/src/main/res/layout/item_carousel.xml
@@ -66,47 +66,50 @@
             android:layout_marginTop="20dp"
             android:overScrollMode="never"
             android:textAlignment="center"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp" />
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp">
+
+    </androidx.viewpager2.widget.ViewPager2>
+
+    <Button
+            android:id="@+id/btnPrev"
+            android:layout_width="11dp"
+            android:layout_height="31dp"
+            style="@style/button_style"
+            android:background="@drawable/arrow"
+            android:rotationY="180"
+            android:contentDescription="@string/previous_cards"
+            tools:ignore="RtlSymmetry,TouchTargetSizeCheck"
+            android:paddingEnd="12dp"
+            app:layout_constraintEnd_toStartOf="@+id/imagePager"
+            app:layout_constraintTop_toTopOf="@+id/imagePager"
+            app:layout_constraintBottom_toBottomOf="@+id/imagePager"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="2dp" />
 
     <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/dotsLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:orientation="horizontal"
             android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@id/imagePager"
-            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/imagePager" />
 
-        <Button
-                android:id="@+id/btnPrev"
-                android:layout_width="11dp"
-                android:layout_height="31dp"
-                style="@style/button_style"
-                android:background="@drawable/arrow"
-                android:rotationY="180"
-                android:contentDescription="@string/previous_cards"
-                tools:ignore="RtlSymmetry,TouchTargetSizeCheck"
-                android:paddingEnd="12dp"
-                android:layout_marginEnd="12dp" />
+    <Button
+            android:id="@+id/btnNext"
+            android:layout_width="11dp"
+            android:layout_height="31dp"
+            style="@style/button_style"
+            android:background="@drawable/arrow"
+            android:contentDescription="@string/next_cards"
+            tools:ignore="TouchTargetSizeCheck"
+            app:layout_constraintStart_toEndOf="@+id/imagePager"
+            app:layout_constraintTop_toTopOf="@+id/imagePager"
+            app:layout_constraintBottom_toBottomOf="@+id/imagePager"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="2dp" />
 
-        <LinearLayout
-                android:id="@+id/dotsLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center" />
-
-        <Button
-                android:id="@+id/btnNext"
-                android:layout_width="11dp"
-                android:layout_height="31dp"
-                style="@style/button_style"
-                android:background="@drawable/arrow"
-                android:contentDescription="@string/next_cards"
-                tools:ignore="TouchTargetSizeCheck"
-                android:layout_marginStart="12dp" />
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
