--- a/app/src/main/res/layout/item_carousel_card.xml
+++ b/app/src/main/res/layout/item_carousel_card.xml
@@ -40,23 +40,35 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="10dp" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="68dp"
+            android:layout_height="68dp"
+            android:background="@drawable/photo_circle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="22dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/photoBack"
+            android:layout_marginStart="35dp"
+            android:layout_marginEnd="35dp">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <com.google.android.material.imageview.ShapeableImageView
             android:background="@drawable/photo_filler"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="66dp"
+            android:layout_height="66dp"
             android:id="@+id/avatar"
             android:scaleType="centerCrop"
             app:shapeAppearanceOverlay="@style/rounded_image_view"
-            app:strokeColor="@color/blue"
-            app:layout_constraintTop_toTopOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@id/imageView"
-            app:layout_constraintEnd_toEndOf="@id/imageView"
+            app:strokeColor="@color/white"
             android:contentDescription="@string/avatar"
             app:strokeWidth="3dp"
             android:padding="2dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginStart="25dp"
-            android:layout_marginEnd="25dp" />
+            app:layout_constraintEnd_toEndOf="@id/photoBack"
+            app:layout_constraintStart_toStartOf="@id/photoBack"
+            app:layout_constraintTop_toTopOf="@id/photoBack"
+            app:layout_constraintBottom_toBottomOf="@id/photoBack" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
@@ -66,5 +78,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
