--- a/app/src/main/res/layout/item_carousel.xml
+++ b/app/src/main/res/layout/item_carousel.xml
@@ -30,10 +30,8 @@
                 android:id="@+id/editTeam"
                 android:contentDescription="@string/edit_team_button"
                 android:background="@drawable/edit_icon"
-                app:drawableTint="@color/orange"
-                style="@style/button_style"
+                style="@style/orange_button_style"
                 tools:ignore="TouchTargetSizeCheck"
-                android:backgroundTint="@color/orange"
                 app:layout_constraintStart_toEndOf="@+id/teamName"
                 android:layout_marginStart="16dp"
                 app:layout_constraintTop_toTopOf="@+id/teamName"
@@ -46,9 +44,8 @@
                 android:id="@+id/deleteTeam"
                 android:contentDescription="@string/delete_team_button"
                 android:background="@drawable/delete_photo_icon"
-                style="@style/button_style"
+                style="@style/orange_button_style"
                 tools:ignore="TouchTargetSizeCheck"
-                android:backgroundTint="@color/orange"
                 app:layout_constraintStart_toEndOf="@+id/editTeam"
                 android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="@+id/editTeam"
@@ -75,7 +72,7 @@
             android:id="@+id/btnPrev"
             android:layout_width="11dp"
             android:layout_height="31dp"
-            style="@style/button_style"
+            style="@style/classic_button_style"
             android:background="@drawable/arrow"
             android:rotationY="180"
             android:contentDescription="@string/previous_cards"
@@ -102,7 +99,6 @@
             android:id="@+id/btnNext"
             android:layout_width="11dp"
             android:layout_height="31dp"
-            style="@style/button_style"
             android:background="@drawable/arrow"
             android:contentDescription="@string/next_cards"
             tools:ignore="TouchTargetSizeCheck"
@@ -110,6 +106,8 @@
             app:layout_constraintTop_toTopOf="@+id/imagePager"
             app:layout_constraintBottom_toBottomOf="@+id/imagePager"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="2dp" />
+            android:layout_marginEnd="2dp"
+            style="@style/classic_button_style"
+            android:clickable="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
