--- a/app/src/main/res/layout/item_carousel_card.xml
+++ b/app/src/main/res/layout/item_carousel_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
@@ -27,19 +28,6 @@
             android:layout_marginTop="11dp"
             android:layout_marginStart="16dp" />
 
-    <TextView
-            android:textAppearance="@style/card_name"
-            android:textAlignment="center"
-            android:autoSizeTextType="uniform"
-            android:textColor="@color/dark_gray"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/name"
-            app:layout_constraintTop_toBottomOf="@id/avatar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="68dp"
             android:layout_height="68dp"
@@ -53,6 +41,22 @@
             android:layout_marginEnd="35dp">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+            android:textAppearance="@style/card_name"
+            android:textAlignment="center"
+            android:autoSizeTextType="uniform"
+            android:textColor="@color/dark_gray"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/name"
+            app:layout_constraintTop_toBottomOf="@id/photoBack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:maxWidth="120dp" />
 
     <com.google.android.material.imageview.ShapeableImageView
             android:background="@drawable/photo_filler"
@@ -79,5 +83,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:visibility="gone" />
+            tools:ignore="SpeakableTextPresentCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
