--- a/app/src/main/res/layout/upload_photo_dialog.xml
+++ b/app/src/main/res/layout/upload_photo_dialog.xml
@@ -16,7 +16,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp"
             android:background="@drawable/close_icon"
-            style="@style/button_style"
+            style="@style/orange_button_style"
             tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/upload_desc"
-            android:textAppearance="@style/reload_desc"
+            android:textAppearance="@style/dialog_desc"
             android:textAlignment="center"
             android:fontFamily="@font/montserrat_medium"
             android:autoSizeTextType="uniform"
@@ -85,7 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:background="@drawable/login_button"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            style="@style/orange_button_style"
             android:textAppearance="@style/reload_button"
             android:text="@string/miniature_button"
             android:textAlignment="textStart"
@@ -124,12 +124,12 @@
                 android:layout_height="40dp"
                 android:layout_weight="3"
                 android:background="@drawable/pick_button"
-                style="@style/Widget.AppCompat.Button.Borderless"
+                style="@style/classic_button_style"
                 android:textAppearance="@style/pick_button"
                 android:text="@string/pick_button"
                 android:textAlignment="center"
                 android:fontFamily="@font/montserrat_bold"
-                android:autoSizeTextType="uniform"
+                android:autoSizeTextType="none"
                 android:paddingVertical="6dp"
                 tools:ignore="TouchTargetSizeCheck"
                 android:layout_marginEnd="8dp"
@@ -142,7 +142,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:background="@drawable/pick_button"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                style="@style/classic_button_style"
                 android:textAlignment="center"
                 android:textAppearance="@style/pick_button"
                 android:fontFamily="@font/montserrat_bold"
