--- a/app/src/main/res/drawable/blue_button_background.xml
+++ b/app/src/main/res/drawable/blue_button_background.xml
@@ -7,10 +7,10 @@
         </shape>
     </item>
     <item>
-        <ripple android:color="#EC7D24">
+        <ripple android:color="#2D54C3">
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/orange" />
+                    <solid android:color="#2646A4" />
                     <corners android:radius="30dp" />
                 </shape>
             </item>
