--- a/app/src/main/res/drawable/edit_field_background.xml
+++ b/app/src/main/res/drawable/edit_field_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle" android:width="358dp" android:height="37dp">
-            <solid android:color="#F2E2E2E2" />
+            <solid android:color="@color/field_background" />
             <corners android:radius="15dp" />
         </shape>
     </item>
