--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,7 +87,8 @@
                 app:layout_constraintTop_toBottomOf="@id/separator"
                 android:layout_marginTop="28dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp">
+                android:layout_marginStart="32dp"
+                android:backgroundTint="#F2E2E2E2">
 
             <EditText
                     android:id="@+id/login"
@@ -127,7 +128,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp">
+                android:layout_marginEnd="32dp"
+                android:backgroundTint="#F2E2E2E2">
 
             <EditText
                     android:id="@+id/password"
@@ -163,7 +165,7 @@
                 android:text="@string/login_button"
                 android:textAppearance="@style/login_button"
                 android:background="@drawable/login_button"
-                style="@style/Widget.AppCompat.Button.Borderless"
+                style="@style/orange_button_style"
                 android:elevation="5dp"
                 android:layout_below="@+id/password_field"
                 android:layout_centerHorizontal="true"
