--- a/app/src/main/res/layout/delete_photo_dialog.xml
+++ b/app/src/main/res/layout/delete_photo_dialog.xml
@@ -16,7 +16,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp"
             android:background="@drawable/close_icon"
-            style="@style/button_style"
+            style="@style/orange_button_style"
             tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
@@ -36,11 +36,11 @@
             android:layout_marginTop="5dp" />
 
     <TextView
-            android:id="@+id/delete_desc"
+            android:id="@+id/create_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/delete_desc"
-            android:textAppearance="@style/reload_desc"
+            android:textAppearance="@style/dialog_desc"
             android:textAlignment="textStart"
             android:fontFamily="@font/montserrat_medium"
             android:autoSizeTextType="uniform"
@@ -67,7 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:background="@drawable/login_button"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            style="@style/orange_button_style"
             android:textAppearance="@style/reload_button"
             android:text="@string/delete_button"
             android:textAlignment="textStart"
@@ -82,7 +82,7 @@
             android:paddingHorizontal="30dp"
             android:paddingVertical="5dp"
             tools:ignore="TouchTargetSizeCheck"
-            app:layout_constraintTop_toBottomOf="@id/delete_desc"
+            app:layout_constraintTop_toBottomOf="@id/create_desc"
             android:layout_marginTop="40dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
