--- a/app/src/main/res/layout/edit_user_dialog.xml
+++ b/app/src/main/res/layout/edit_user_dialog.xml
@@ -16,11 +16,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp"
             android:background="@drawable/close_icon"
-            style="@style/button_style"
+            style="@style/orange_button_style"
             tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
-            android:id="@+id/edit_text"
+            android:id="@+id/create_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/edit_text"
@@ -42,7 +42,7 @@
             android:src="@drawable/separator"
             android:contentDescription="@string/separator"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/edit_text"
+            app:layout_constraintTop_toBottomOf="@+id/create_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -138,7 +138,7 @@
             android:layout_width="0dp"
             android:layout_height="45dp"
             android:background="@drawable/login_button"
-            style="@style/Widget.AppCompat.Button.Borderless"
+            style="@style/orange_button_style"
             android:textAppearance="@style/reload_button"
             android:text="@string/edit_button"
             android:textAlignment="center"
