--- a/app/src/main/res/layout/update_user_dialog.xml
+++ b/app/src/main/res/layout/update_user_dialog.xml
@@ -16,7 +16,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp"
             android:background="@drawable/close_icon"
-            style="@style/button_style"
+            style="@style/orange_button_style"
             tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/reload_desc"
-            android:textAppearance="@style/reload_desc"
+            android:textAppearance="@style/dialog_desc"
             android:textAlignment="textStart"
             android:fontFamily="@font/montserrat_medium"
             android:autoSizeTextType="uniform"
@@ -107,7 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:background="@drawable/login_button"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            style="@style/orange_button_style"
             android:textAppearance="@style/reload_button"
             android:text="@string/reload_button"
             android:textAlignment="textStart"
