--- a/app/src/main/res/layout/create_team_dialog.xml
+++ b/app/src/main/res/layout/create_team_dialog.xml
@@ -6,7 +6,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/dialog_background">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -18,7 +18,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingBottom="25dp">
 
             <Button
                     android:id="@+id/close"
@@ -34,7 +35,7 @@
                     tools:ignore="TouchTargetSizeCheck" />
 
             <TextView
-                    android:id="@+id/create_desc"
+                    android:id="@+id/delete_desc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/create_team_desc"
@@ -122,7 +123,7 @@
                     android:layout_alignParentEnd="true"
                     android:paddingHorizontal="16dp"
                     android:paddingVertical="10dp"
-                    app:layout_constraintTop_toBottomOf="@+id/create_desc"
+                    app:layout_constraintTop_toBottomOf="@+id/delete_desc"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginTop="15dp"
@@ -193,11 +194,12 @@
                     android:autoSizeTextType="uniform"
                     app:layout_constraintTop_toBottomOf="@+id/searchUsers"
                     android:layout_marginTop="25dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="25dp"
                     android:minWidth="120dip"
                     android:minHeight="35dip"
-                    android:enabled="false" />
+                    android:enabled="false"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:gravity="center_horizontal"
+                    app:layout_constraintVertical_bias="1.0" />
 
             <ListView
                     android:id="@+id/addedMembers"
@@ -211,7 +213,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="20dp" />
+                    android:layout_marginEnd="20dp"
+                    android:nestedScrollingEnabled="false" />
 
             <ListView
                     android:id="@+id/searchUsers"
@@ -225,7 +228,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="20dp" />
+                    android:layout_marginEnd="20dp"
+                    android:nestedScrollingEnabled="false" />
 
             <TextView
                     android:id="@+id/error_text"
@@ -241,6 +245,23 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="20dp"
                     android:visibility="gone" />
+
+            <TextView
+                    android:id="@+id/empty_search_text"
+                    android:text="@string/empty_search_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/empty_search_message"
+                    android:textAlignment="center"
+                    app:layout_constraintTop_toBottomOf="@+id/btnSearch"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="20dp"
+                    android:visibility="gone"
+                    android:layout_marginTop="25dp"
+                    app:layout_constraintBottom_toTopOf="@+id/submit"
+                    android:layout_marginBottom="25dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
