--- a/app/src/main/res/layout/delete_dialog.xml
+++ b/app/src/main/res/layout/delete_dialog.xml
@@ -36,18 +36,18 @@
             android:layout_marginTop="5dp" />
 
     <TextView
-            android:id="@+id/create_desc"
+            android:id="@+id/delete_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/delete_desc"
+            android:text="@string/delete_photo_desc"
             android:textAppearance="@style/dialog_desc"
-            android:textAlignment="textStart"
+            android:textAlignment="center"
             android:fontFamily="@font/montserrat_medium"
             android:autoSizeTextType="uniform"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/separator"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp" />
 
@@ -65,7 +65,7 @@
     <Button
             android:id="@+id/submit"
             android:layout_width="wrap_content"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/login_button"
             style="@style/orange_button_style"
             android:textAppearance="@style/reload_button"
@@ -79,10 +79,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="22dp"
-            android:paddingHorizontal="30dp"
+            android:paddingHorizontal="35dp"
             android:paddingVertical="5dp"
             tools:ignore="TouchTargetSizeCheck"
-            app:layout_constraintTop_toBottomOf="@id/create_desc"
-            android:layout_marginTop="40dp" />
+            app:layout_constraintTop_toBottomOf="@id/delete_desc"
+            android:layout_marginTop="30dp"
+            android:minHeight="35dip" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
