--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,6 +6,19 @@
         android:layout_height="match_parent"
         tools:context=".ui.fragments.ProfileFragment">
 
+    <Button
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:id="@+id/log_out"
+            android:contentDescription="@string/exit_button"
+            android:background="@drawable/exit_icon"
+            style="@style/classic_button_style"
+            tools:ignore="TouchTargetSizeCheck"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="parent" />
+
     <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="0dp"
@@ -14,26 +27,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <Button
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
-                    android:id="@+id/log_out"
-                    android:contentDescription="@string/exit_button"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="20dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="20dp"
-                    android:background="@drawable/exit_icon"
-                    style="@style/classic_button_style"
-                    tools:ignore="TouchTargetSizeCheck" />
-
             <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/scroll_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/scrollview_background"
@@ -41,7 +43,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginTop="115dp">
+                    android:layout_marginTop="115dp"
+                    android:paddingBottom="30dp">
 
                 <TextView
                         android:textIsSelectable="true"
@@ -94,7 +97,6 @@
                         app:layout_constraintTop_toBottomOf="@+id/direction" />
 
                 <LinearLayout
-                        android:baselineAligned="false"
                         android:layout_width="370dp"
                         android:layout_height="83dp"
                         android:layout_centerHorizontal="true"
@@ -108,7 +110,8 @@
                         android:layout_marginTop="24dp"
                         android:divider="@drawable/productivity_separator"
                         android:showDividers="middle"
-                        android:gravity="center_horizontal">
+                        android:gravity="center_horizontal"
+                        android:baselineAligned="false">
 
                     <LinearLayout
                             android:layout_width="0dp"
@@ -201,11 +204,11 @@
                         android:layout_gravity="center"
                         android:orientation="vertical"
                         app:layout_constraintTop_toBottomOf="@+id/productivity"
-                        android:layout_marginTop="40dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        android:layout_marginBottom="40dp"
+                        android:layout_marginTop="30dp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent">
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:id="@+id/contacts_container"
+                        android:visibility="gone">
 
                     <TextView
                             android:visibility="gone"
@@ -410,10 +413,10 @@
                     android:contentDescription="@string/avatar"
                     app:strokeWidth="3dp"
                     android:padding="2dp"
-                    android:layout_marginTop="46dp"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/scroll_container"
+                    android:layout_marginBottom="-62dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
