--- a/app/src/main/res/layout/item_carousel_card.xml
+++ b/app/src/main/res/layout/item_carousel_card.xml
@@ -10,7 +10,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/card_background"
-            android:id="@+id/imageView"
+            android:id="@+id/logo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -23,8 +23,8 @@
             android:src="@drawable/team_leader_icon"
             android:visibility="gone"
             android:id="@+id/teamLeaderIcon"
-            app:layout_constraintTop_toTopOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/logo"
+            app:layout_constraintStart_toStartOf="@+id/logo"
             android:layout_marginTop="11dp"
             android:layout_marginStart="16dp" />
 
@@ -53,10 +53,10 @@
             app:layout_constraintTop_toBottomOf="@id/photoBack"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:maxWidth="120dp" />
+            android:maxWidth="120dp"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     <com.google.android.material.imageview.ShapeableImageView
             android:background="@drawable/photo_filler"
