--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,8 +9,22 @@
     <Button
             android:layout_width="22dp"
             android:layout_height="22dp"
-            android:id="@+id/log_out"
+            android:id="@+id/back_button"
             android:contentDescription="@string/exit_button"
+            android:background="@drawable/exit_icon"
+            style="@style/classic_button_style"
+            tools:ignore="TouchTargetSizeCheck"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone" />
+
+    <Button
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:id="@+id/log_out"
+            android:contentDescription="@string/logout_button"
             android:background="@drawable/exit_icon"
             style="@style/classic_button_style"
             tools:ignore="TouchTargetSizeCheck"
@@ -97,8 +111,8 @@
                         app:layout_constraintTop_toBottomOf="@+id/direction" />
 
                 <LinearLayout
-                        android:layout_width="370dp"
-                        android:layout_height="83dp"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_alignParentTop="true"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +125,10 @@
                         android:divider="@drawable/productivity_separator"
                         android:showDividers="middle"
                         android:gravity="center_horizontal"
-                        android:baselineAligned="false">
+                        android:baselineAligned="false"
+                        android:paddingBottom="10dp"
+                        android:layout_marginStart="18dp"
+                        android:layout_marginEnd="18dp">
 
                     <LinearLayout
                             android:layout_width="0dp"
