Transform ListView to RecyclerView for disable nested scrolling in search

--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -4,8 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragments.TeamsFragment"
-        android:id="@+id/teamsContainer">
+        tools:context=".ui.fragments.TeamsFragment">
 
     <ImageView
             android:contentDescription="@string/yuta_logo"
