--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#F7F7F7"
-        tools:context=".ui.LoginActivity">
+        tools:context=".ui.LoginActivity"
+        tools:ignore="Overdraw">
 
     <RelativeLayout
             android:id="@+id/header"
