--- a/app/src/main/res/layout/create_team_dialog.xml
+++ b/app/src/main/res/layout/create_team_dialog.xml
@@ -152,7 +152,7 @@
                     android:layout_marginEnd="20dp"
                     app:layout_constraintEnd_toEndOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
                     android:id="@+id/btnSearch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -163,7 +163,7 @@
                     android:drawablePadding="10dp"
                     app:drawableLeftCompat="@drawable/find_icon"
                     app:layout_constraintEnd_toEndOf="@+id/find_name"
-                    android:paddingVertical="10dp"
+                    android:paddingVertical="5dp"
                     tools:ignore="TouchTargetSizeCheck"
                     app:layout_constraintTop_toBottomOf="@+id/find_name"
                     android:layout_marginTop="10dp"
@@ -201,13 +201,10 @@
                     android:gravity="center_horizontal"
                     app:layout_constraintVertical_bias="1.0" />
 
-            <ListView
+            <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/addedMembers"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:divider="@android:color/transparent"
-                    android:dividerHeight="10.0dp"
-                    android:maxHeight="170dp"
                     app:layout_constraintTop_toBottomOf="@+id/added_members"
                     android:layout_marginTop="15dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -216,13 +213,10 @@
                     android:layout_marginEnd="20dp"
                     android:nestedScrollingEnabled="false" />
 
-            <ListView
+            <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/searchUsers"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:divider="@android:color/transparent"
-                    android:dividerHeight="10.0dp"
-                    android:maxHeight="170dp"
                     app:layout_constraintTop_toBottomOf="@id/btnSearch"
                     android:layout_marginTop="15dp"
                     app:layout_constraintStart_toStartOf="parent"
