--- a/app/src/main/res/layout/item_carousel_card.xml
+++ b/app/src/main/res/layout/item_carousel_card.xml
@@ -47,16 +47,17 @@
             android:textAlignment="center"
             android:autoSizeTextType="uniform"
             android:textColor="@color/dark_gray"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/name"
-            app:layout_constraintTop_toBottomOf="@id/photoBack"
+            app:layout_constraintTop_toBottomOf="@id/avatar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:maxWidth="120dp"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="5dp" />
 
     <com.google.android.material.imageview.ShapeableImageView
             android:background="@drawable/photo_filler"
