--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--suppress NavigationFile -->
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -8,7 +9,12 @@
             android:id="@+id/profileFragment"
             android:name="com.ilyap.yuta.ui.fragments.ProfileFragment"
             android:label="fragment_profile"
-            tools:layout="@layout/fragment_profile" />
+            tools:layout="@layout/fragment_profile">
+        <argument
+                android:name="fromTeams"
+                app:argType="boolean"
+                android:defaultValue="false" />
+    </fragment>
     <fragment
             android:id="@+id/projectsFragment"
             android:name="com.ilyap.yuta.ui.fragments.ProjectsFragment"
@@ -23,11 +29,29 @@
             android:id="@+id/teamsFragment"
             android:name="com.ilyap.yuta.ui.fragments.TeamsFragment"
             android:label="fragment_teams"
-            tools:layout="@layout/fragment_teams" />
-
+            tools:layout="@layout/fragment_teams">
+        <action
+                android:id="@+id/action_teamsFragment_to_profileFragment"
+                app:destination="@id/profileFragment"
+                app:popUpTo="@id/teamsFragment"
+                app:popUpToInclusive="true" >
+            <argument
+                    android:name="fromTeams"
+                    android:defaultValue="true" />
+        </action>
+        <action
+                android:id="@+id/action_teamsFragment_to_readonlyProfileFragment"
+                app:destination="@id/readonlyProfileFragment"
+                app:popUpTo="@id/teamsFragment"
+                app:popUpToInclusive="true" />
+    </fragment>
     <fragment
             android:id="@+id/readonlyProfileFragment"
             android:name="com.ilyap.yuta.ui.fragments.ReadonlyProfileFragment"
-            android:label="fragment_profile"
-            tools:layout="@layout/fragment_profile" />
+            android:label="ReadonlyProfileFragment">
+        <argument
+                android:name="userId"
+                app:argType="integer"
+                android:defaultValue="-1" />
+    </fragment>
 </navigation>
